--- a/index.html
+++ b/index.html
@@ -5,6 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cover Letter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .container {
+            margin-top: 50px;
+            margin-bottom: 50px;
+            padding: 50px;
+        }
+        @media print {
+            @page {
+                size: 210mm 330mm; /* F4 size */
+                /* size: letter; */
+                /*  margin: 0; */
+            }
+            body, html {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+            }
+            body * {
+                visibility: hidden;
+            }
+            .card, .card * {
+                visibility: visible;
+            }
+            .card {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                margin: 0 !important;
+                padding: 0 !important;
+                box-shadow: none !important;
+                border: none !important;
+            }
+            .print-btn {
+                display: none;
+            }
+    </style>
 </head>
 <body>
     <div class="container mt-5">
@@ -37,6 +76,9 @@
             </div>
         </div>
     </div>
+    <div class="text-center mt-3">
+            <button class="btn btn-primary print-btn" onclick="window.print()">Print This CV</button>
+    </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
