--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 
                 <p><strong>Best regards,</strong><br>
                 Eksansilus <br>
-                Manual QA Tester | <a href="eksansilus@gmail.com">eksansilus@gmail.com</a> | <a href="#">[Your Upwork Link]</a></p>
+                Manual QA Tester | <a href="eksansilus@gmail.com">eksansilus@gmail.com</a> | <a href="https://github.com/johnxth">GitHub</a></p>
             </div>
         </div>
     </div>
