--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="card shadow-lg">
             <div class="card-body p-4">
                 <h2 class="text-primary">Cover Letter</h2>
-                <p><strong>Subject:</strong> Experienced Manual QA Tester | Ensuring Bug-Free Applications</p>
+                <p><strong>Subject:</strong> Manual QA Tester | Ensuring Bug-Free Applications</p>
                 
                 <p>Dear <strong>HRD</strong>,</p>
                 
