--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     </div>
     <div class="text-center mt-3">
-            <button class="btn btn-primary print-btn" onclick="window.print()">Print This CV</button>
+            <button class="btn btn-primary print-btn" onclick="window.print()">Print This Cover Letter</button>
     </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
